removes z-index on index map to test bugfix in chrome on ios

--- a/earthquakes/static/css/map-application.css
+++ b/earthquakes/static/css/map-application.css
@@ -134,7 +134,7 @@
 .prologue .dashboard #content-map-canvas {
     width: 100%;
     height: 100%;
-    z-index: 10;
+    /*z-index: 10;*/
 }
 
 /* detail page map */
